# trainins

BFS_shortest_path/: CMakeLists.txt  main.cpp
c#_test/cons/: ANEO Sponsored Puzzle.html  Program.cs  README.md  cons.csproj  cons.sln
c#_test/cons/ANEO Sponsored Puzzle_files/: css  js  plot.min.js.download  prettify.js.download
c#_test/cons/Properties/: AssemblyInfo.cs  Settings.Designer.cs
dyn_progr/: CMakeLists.txt  README.md  main.cpp
graphs/: CMakeLists.txt  README.md  main.cpp
knapsack/: CMakeLists.txt  README.md  main.cpp
longest_sequence_bits/: CMakeLists.txt  README.md  main.cpp
prison_after_N_days/: CMakeLists.txt  README.md  main.cpp
shift_array/: CMakeLists.txt  README.md  main.cpp
small_test/: CMakeLists.txt  README.md  main.cpp
